--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
       <a class="p-2 link-dark" href="#">العالم</a>
-      <a class="p-2 link-dark" href="#">الولايات المتحدة</a>
+      <a class="p-2 link-dark" href="#">المملكة العربية السعودية</a>
       <a class="p-2 link-dark" href="#">التقنية</a>
       <a class="p-2 link-dark" href="#">التصميم</a>
       <a class="p-2 link-dark" href="#">الحضارة</a>
